# celestial

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: celestial_extension.cpp
src/include/: celestial_extension.hpp
test/sql/: celestial.test
